ceilometer (2013.1.2-1) unstable; urgency=low

  * New upstream release.
  * Added configuration to each init scripts so that they log in their own log
    file, added the corresponding purge postrm and logrotate.
  * Removed applied upstream patch: modify-limitation-on-request-version.patch

 -- Thomas Goirand <zigo@debian.org>  Mon, 03 Jun 2013 16:26:14 +0800

ceilometer (2013.1.1-1) unstable; urgency=low

  * New upstream release.
  * rmdir --ignore-fail-on-non-empty of few folders owned by nova after purge.
    Thanks to Andreas Beckmann for reporting (Closes: #709876).
  * Ran wrap-and-sort to clean debian/control.
  * Replaced pkgos_var_user_group nova by pkgos_adduser, as we don't want to
    create the log / lib dirs of nova (Closes: #709876).
  * Creates the correct libvirt group if the package is installed in Ubuntu.
  * Bumped Standard-Version to 3.9.4.

 -- Thomas Goirand <zigo@debian.org>  Mon, 27 May 2013 11:07:59 +0800

ceilometer (2013.1-3) unstable; urgency=low

  * Adds modify-limitation-on-request-version.patch without wich Ceilometer
    doesn't work at all.

 -- Thomas Goirand <zigo@debian.org>  Tue, 21 May 2013 17:27:07 +0800

ceilometer (2013.1-2) unstable; urgency=low

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Thu, 16 May 2013 07:44:07 +0000

ceilometer (2013.1-1) experimental; urgency=low

  * Initial release (Closes: #693406).

 -- Thomas Goirand <zigo@debian.org>  Wed, 10 Apr 2013 13:19:50 +0800