@@ -22,6 +22,7 @@ Build-Depends-Indep: pep8,
                      python-flask (>= 0.9),
                      python-glance (>= 2013.1~),
                      python-glanceclient (>= 1:0.6),
+                     python-happybase,
                      python-iso8601,
                      python-keystoneclient (>= 1:0.2.3),
                      python-kombu,
